[package]
name = "abc042"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc042-a = { alias = "a", problem = "https://atcoder.jp/contests/abc042/tasks/abc042_a" }
abc042-b = { alias = "b", problem = "https://atcoder.jp/contests/abc042/tasks/abc042_b" }
abc042-c = { alias = "c", problem = "https://atcoder.jp/contests/abc042/tasks/arc058_a" }
abc042-d = { alias = "d", problem = "https://atcoder.jp/contests/abc042/tasks/arc058_b" }

[[bin]]
name = "abc042-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc042-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc042-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc042-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
