[package]
name = "abc047"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc047-a = { alias = "a", problem = "https://atcoder.jp/contests/abc047/tasks/abc047_a" }
abc047-b = { alias = "b", problem = "https://atcoder.jp/contests/abc047/tasks/abc047_b" }
abc047-c = { alias = "c", problem = "https://atcoder.jp/contests/abc047/tasks/arc063_a" }
abc047-d = { alias = "d", problem = "https://atcoder.jp/contests/abc047/tasks/arc063_b" }

[[bin]]
name = "abc047-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc047-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc047-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc047-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
