[package]
name = "abc053"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc053-a = { alias = "a", problem = "https://atcoder.jp/contests/abc053/tasks/abc053_a" }
abc053-b = { alias = "b", problem = "https://atcoder.jp/contests/abc053/tasks/abc053_b" }
abc053-c = { alias = "c", problem = "https://atcoder.jp/contests/abc053/tasks/arc068_a" }
abc053-d = { alias = "d", problem = "https://atcoder.jp/contests/abc053/tasks/arc068_b" }

[[bin]]
name = "abc053-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc053-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc053-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc053-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
