[package]
name = "abc057"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc057-a = { alias = "a", problem = "https://atcoder.jp/contests/abc057/tasks/abc057_a" }
abc057-b = { alias = "b", problem = "https://atcoder.jp/contests/abc057/tasks/abc057_b" }
abc057-c = { alias = "c", problem = "https://atcoder.jp/contests/abc057/tasks/abc057_c" }
abc057-d = { alias = "d", problem = "https://atcoder.jp/contests/abc057/tasks/abc057_d" }

[[bin]]
name = "abc057-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc057-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc057-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc057-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
