[package]
name = "abc064"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc064-a = { alias = "a", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_a" }
abc064-b = { alias = "b", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_b" }
abc064-c = { alias = "c", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_c" }
abc064-d = { alias = "d", problem = "https://atcoder.jp/contests/abc064/tasks/abc064_d" }

[[bin]]
name = "abc064-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc064-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc064-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc064-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
