[package]
name = "abc069"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc069-a = { alias = "a", problem = "https://atcoder.jp/contests/abc069/tasks/abc069_a" }
abc069-b = { alias = "b", problem = "https://atcoder.jp/contests/abc069/tasks/abc069_b" }
abc069-c = { alias = "c", problem = "https://atcoder.jp/contests/abc069/tasks/arc080_a" }
abc069-d = { alias = "d", problem = "https://atcoder.jp/contests/abc069/tasks/arc080_b" }

[[bin]]
name = "abc069-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc069-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc069-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc069-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
