[package]
name = "abc071"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc071-a = { alias = "a", problem = "https://atcoder.jp/contests/abc071/tasks/abc071_a" }
abc071-b = { alias = "b", problem = "https://atcoder.jp/contests/abc071/tasks/abc071_b" }
abc071-c = { alias = "c", problem = "https://atcoder.jp/contests/abc071/tasks/arc081_a" }
abc071-d = { alias = "d", problem = "https://atcoder.jp/contests/abc071/tasks/arc081_b" }

[[bin]]
name = "abc071-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc071-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc071-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc071-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
