[package]
name = "abc072"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc072-a = { alias = "a", problem = "https://atcoder.jp/contests/abc072/tasks/abc072_a" }
abc072-b = { alias = "b", problem = "https://atcoder.jp/contests/abc072/tasks/abc072_b" }
abc072-c = { alias = "c", problem = "https://atcoder.jp/contests/abc072/tasks/arc082_a" }
abc072-d = { alias = "d", problem = "https://atcoder.jp/contests/abc072/tasks/arc082_b" }

[[bin]]
name = "abc072-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc072-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc072-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc072-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
