[package]
name = "abc082"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc082-a = { alias = "a", problem = "https://atcoder.jp/contests/abc082/tasks/abc082_a" }
abc082-b = { alias = "b", problem = "https://atcoder.jp/contests/abc082/tasks/abc082_b" }
abc082-c = { alias = "c", problem = "https://atcoder.jp/contests/abc082/tasks/arc087_a" }
abc082-d = { alias = "d", problem = "https://atcoder.jp/contests/abc082/tasks/arc087_b" }

[[bin]]
name = "abc082-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc082-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc082-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc082-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
