[package]
name = "abc083"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc083-a = { alias = "a", problem = "https://atcoder.jp/contests/abc083/tasks/abc083_a" }
abc083-b = { alias = "b", problem = "https://atcoder.jp/contests/abc083/tasks/abc083_b" }
abc083-c = { alias = "c", problem = "https://atcoder.jp/contests/abc083/tasks/arc088_a" }
abc083-d = { alias = "d", problem = "https://atcoder.jp/contests/abc083/tasks/arc088_b" }

[[bin]]
name = "abc083-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc083-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc083-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc083-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
