[package]
name = "abc085"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc085-a = { alias = "a", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_a" }
abc085-b = { alias = "b", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_b" }
abc085-c = { alias = "c", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_c" }
abc085-d = { alias = "d", problem = "https://atcoder.jp/contests/abc085/tasks/abc085_d" }

[[bin]]
name = "abc085-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc085-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc085-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc085-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
