[package]
name = "abc087"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc087-a = { alias = "a", problem = "https://atcoder.jp/contests/abc087/tasks/abc087_a" }
abc087-b = { alias = "b", problem = "https://atcoder.jp/contests/abc087/tasks/abc087_b" }
abc087-c = { alias = "c", problem = "https://atcoder.jp/contests/abc087/tasks/arc090_a" }
abc087-d = { alias = "d", problem = "https://atcoder.jp/contests/abc087/tasks/arc090_b" }

[[bin]]
name = "abc087-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc087-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc087-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc087-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
