[package]
name = "abc088"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc088-a = { alias = "a", problem = "https://atcoder.jp/contests/abc088/tasks/abc088_a" }
abc088-b = { alias = "b", problem = "https://atcoder.jp/contests/abc088/tasks/abc088_b" }
abc088-c = { alias = "c", problem = "https://atcoder.jp/contests/abc088/tasks/abc088_c" }
abc088-d = { alias = "d", problem = "https://atcoder.jp/contests/abc088/tasks/abc088_d" }

[[bin]]
name = "abc088-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc088-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc088-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc088-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
