[package]
name = "abc091"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc091-a = { alias = "a", problem = "https://atcoder.jp/contests/abc091/tasks/abc091_a" }
abc091-b = { alias = "b", problem = "https://atcoder.jp/contests/abc091/tasks/abc091_b" }
abc091-c = { alias = "c", problem = "https://atcoder.jp/contests/abc091/tasks/arc092_a" }
abc091-d = { alias = "d", problem = "https://atcoder.jp/contests/abc091/tasks/arc092_b" }

[[bin]]
name = "abc091-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc091-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc091-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc091-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
