[package]
name = "abc095"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc095-a = { alias = "a", problem = "https://atcoder.jp/contests/abc095/tasks/abc095_a" }
abc095-b = { alias = "b", problem = "https://atcoder.jp/contests/abc095/tasks/abc095_b" }
abc095-c = { alias = "c", problem = "https://atcoder.jp/contests/abc095/tasks/arc096_a" }
abc095-d = { alias = "d", problem = "https://atcoder.jp/contests/abc095/tasks/arc096_b" }

[[bin]]
name = "abc095-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc095-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc095-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc095-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
