[package]
name = "abc096"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc096-a = { alias = "a", problem = "https://atcoder.jp/contests/abc096/tasks/abc096_a" }
abc096-b = { alias = "b", problem = "https://atcoder.jp/contests/abc096/tasks/abc096_b" }
abc096-c = { alias = "c", problem = "https://atcoder.jp/contests/abc096/tasks/abc096_c" }
abc096-d = { alias = "d", problem = "https://atcoder.jp/contests/abc096/tasks/abc096_d" }

[[bin]]
name = "abc096-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc096-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc096-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc096-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
