[package]
name = "abc102"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc102-a = { alias = "a", problem = "https://atcoder.jp/contests/abc102/tasks/abc102_a" }
abc102-b = { alias = "b", problem = "https://atcoder.jp/contests/abc102/tasks/abc102_b" }
abc102-c = { alias = "c", problem = "https://atcoder.jp/contests/abc102/tasks/arc100_a" }
abc102-d = { alias = "d", problem = "https://atcoder.jp/contests/abc102/tasks/arc100_b" }

[[bin]]
name = "abc102-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc102-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc102-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc102-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
