[package]
name = "abc105"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc105-a = { alias = "a", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_a" }
abc105-b = { alias = "b", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_b" }
abc105-c = { alias = "c", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_c" }
abc105-d = { alias = "d", problem = "https://atcoder.jp/contests/abc105/tasks/abc105_d" }

[[bin]]
name = "abc105-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc105-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc105-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc105-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
