[package]
name = "abc112"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc112-a = { alias = "a", problem = "https://atcoder.jp/contests/abc112/tasks/abc112_a" }
abc112-b = { alias = "b", problem = "https://atcoder.jp/contests/abc112/tasks/abc112_b" }
abc112-c = { alias = "c", problem = "https://atcoder.jp/contests/abc112/tasks/abc112_c" }
abc112-d = { alias = "d", problem = "https://atcoder.jp/contests/abc112/tasks/abc112_d" }

[[bin]]
name = "abc112-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc112-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc112-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc112-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
