[package]
name = "abc113"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc113-a = { alias = "a", problem = "https://atcoder.jp/contests/abc113/tasks/abc113_a" }
abc113-b = { alias = "b", problem = "https://atcoder.jp/contests/abc113/tasks/abc113_b" }
abc113-c = { alias = "c", problem = "https://atcoder.jp/contests/abc113/tasks/abc113_c" }
abc113-d = { alias = "d", problem = "https://atcoder.jp/contests/abc113/tasks/abc113_d" }

[[bin]]
name = "abc113-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc113-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc113-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc113-d"
path = "src/bin/d.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
