[package]
name = "abc133"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc133-a = { alias = "a", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_a" }
abc133-b = { alias = "b", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_b" }
abc133-c = { alias = "c", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_c" }
abc133-d = { alias = "d", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_d" }
abc133-e = { alias = "e", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_e" }
abc133-f = { alias = "f", problem = "https://atcoder.jp/contests/abc133/tasks/abc133_f" }

[[bin]]
name = "abc133-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc133-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc133-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc133-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc133-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc133-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
