[package]
name = "abc144"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc144-a = { alias = "a", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_a" }
abc144-b = { alias = "b", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_b" }
abc144-c = { alias = "c", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_c" }
abc144-d = { alias = "d", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_d" }
abc144-e = { alias = "e", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_e" }
abc144-f = { alias = "f", problem = "https://atcoder.jp/contests/abc144/tasks/abc144_f" }

[[bin]]
name = "abc144-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc144-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc144-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc144-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc144-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc144-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
