[package]
name = "abc152"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc152-a = { alias = "a", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_a" }
abc152-b = { alias = "b", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_b" }
abc152-c = { alias = "c", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_c" }
abc152-d = { alias = "d", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_d" }
abc152-e = { alias = "e", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_e" }
abc152-f = { alias = "f", problem = "https://atcoder.jp/contests/abc152/tasks/abc152_f" }

[[bin]]
name = "abc152-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc152-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc152-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc152-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc152-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc152-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
