[package]
name = "abc156"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc156-a = { alias = "a", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_a" }
abc156-b = { alias = "b", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_b" }
abc156-c = { alias = "c", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_c" }
abc156-d = { alias = "d", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_d" }
abc156-e = { alias = "e", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_e" }
abc156-f = { alias = "f", problem = "https://atcoder.jp/contests/abc156/tasks/abc156_f" }

[[bin]]
name = "abc156-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc156-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc156-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc156-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc156-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc156-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
